# slzlm

./: .gitignore  Makefile  README.md  conftest.py  kdtree.py  knn.py  pyproject.toml  setup.py
notebooks/: lzw.ipynb  lzw.py
programs/: encode.cpp  encode_lzw_array.cpp  encode_lzw_map.cpp  trie.cpp
slz/: __init__.py  kd2.py  kdtree.py
src/: LZ77.cpp  LZ77.hpp  LZSS.cpp  LZSS.hpp  LZW.cpp  LZW.hpp  Node.cpp  Node.hpp  PyModule.cpp  Stream.cpp  Stream.hpp  Trie.cpp  Trie.hpp  Util.hpp  comp.cpp  comp.hpp  lzw.c  lzw.h
test/: run_tests.sh  test_array_trie.cpp  test_kdtree.py  test_lz77.cpp  test_lzss.cpp  test_lzw.cpp  test_lzw.py  test_lzwdict.cpp  test_map_trie.cpp  test_trie.py  test_util.cpp
