[tool.poetry]
name = "slz"
version = "0.1.0"
description = "LEMPEL-ZIV"
authors = ["Stefan Wong <stfnwong@gmail.com>"]
license = "ANY"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pybind11 = "^2.11.0"
jupytext = "^1.14.7"
numpy = "^1.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pudb = "^2022.1.3"
ipython = "^8.14.0"
jupyter = "^1.0.0"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.pytest.int.options]
pythonpath = ["."]

#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
